--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,28 @@
   "name": "iot-rgb-frontend",
   "version": "0.1.0",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "5.0.1",
     "axios": "^1.6.8",
-    "react": "18.2.0",
-    "react-native": "0.73.6"
+    "babel-preset-expo": "~54.0.0",
+    "expo": "^54.0.25",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-status-bar": "^3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "15.12.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@react-native/babel-preset": "^0.73.21",
+    "@react-native/metro-config": "^0.73.5"
   }
 }
-
